<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            android:fitsSystemWindows="true">

            <ImageView
                android:id="@+id/collapsinImage"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:contentDescription="@string/app_name"
                android:src="@android:drawable/arrow_down_float"
                app:layout_collapseMode="parallax"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarTitle"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                tools:title="Nombre muy largo de asdasdnskdnfkasjndfkasndfjknaskjdfnkjasdnf"
                app:layout_collapseMode="pin" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cardViewPersonalFields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_detail_personal_fields"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:layout_marginTop="12dp"
                        android:textSize="20dp"
                        android:padding="12dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="12dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/prompt_vh_edad"
                            android:textSize="14dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/textViewAge"
                            android:layout_width="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_height="wrap_content"
                            tools:text="13"
                            android:textSize="14dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="@string/prompt_vh_pais"
                            android:textSize="14dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/textViewPais"
                            android:layout_width="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_height="wrap_content"
                            tools:text="España"
                            android:textSize="14dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="@string/prompt_genero"
                            android:textSize="14dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/textViewGenero"
                            android:layout_width="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_height="wrap_content"
                            tools:text="Hembra"
                            android:textSize="14dp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="12dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="@string/prompt_vh_email"
                            android:textSize="14dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/textViewCorreo"
                            android:layout_width="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            tools:text="asdasdasdasdasdasdas@gmail.com"
                            android:textSize="14dp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cardViewProfessionalFields"
                android:layout_below="@id/cardViewPersonalFields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_detail_other_fields"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:layout_marginTop="12dp"
                        android:textSize="20dp"
                        android:padding="12dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="12dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/prompt_profesion"
                            android:textSize="14dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/textViewProfesion"
                            android:layout_width="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_height="wrap_content"
                            tools:text="Bombero"
                            android:textSize="14dp"
                            android:textStyle="bold"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="12dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/prompt_texto_largo"
                            android:textSize="14dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/textViewRandomString"
                            android:layout_width="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_height="wrap_content"
                            tools:text="Bombeasdasdasdasdasdasdasdasdasdasdasdasdasdasdro"
                            android:ellipsize="end"
                            android:textSize="14dp"
                            android:singleLine="true"
                            android:textStyle="bold"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_detail_favorite_fields"
                        android:paddingLeft="12dp"
                        android:textColor="@android:color/black"
                        android:textStyle="bold|italic"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="12dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="@string/prompt_detail_favorite_fields_color"
                            android:textSize="14dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/textViewColorFavorite"
                            android:layout_width="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_height="wrap_content"
                            tools:text="red"
                            android:textSize="14dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="@string/prompt_detail_favorite_fields_comida"
                            android:textSize="14dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/textViewFoodFavorite"
                            android:layout_width="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_height="wrap_content"
                            tools:text="Meassst"
                            android:textSize="14dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="@string/prompt_detail_favorite_fields_cancion"
                            android:textSize="14dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/textViewSongFavorite"
                            android:layout_width="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_height="wrap_content"
                            tools:text="Let it be"
                            android:singleLine="true"
                            android:ellipsize="middle"
                            android:textSize="14dp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>