<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imageViewOompaLoompa"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:padding="4dp" />

            <TextView
                android:id="@+id/textViewNameSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/imageViewOompaLoompa"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="#000000"
                tools:text="Prueba de un nombre muy largoaaaaaaaaaaaaaaaaaaaaaasdasdasdasdasdasdasdasdasdasda" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/linearLayoutAge"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewNameSurname"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/imageViewOompaLoompa"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewAgeField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:text="@string/prompt_vh_edad" />

                <TextView
                    android:id="@+id/textViewAge"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewNameSurname"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@id/textViewAgeField"
                    android:ellipsize="end"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    tools:text="99" />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/linearLayoutCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewNameSurname"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/linearLayoutAge"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewCountryField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:text="@string/prompt_vh_pais" />

                <TextView
                    android:id="@+id/textViewCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewNameSurname"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@id/textViewAgeField"
                    android:ellipsize="end"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    tools:text="España" />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayoutCountry"
                android:layout_toRightOf="@id/imageViewOompaLoompa"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewEmailField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:text="@string/prompt_vh_email" />

                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewNameSurname"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@id/textViewAgeField"
                    android:ellipsize="end"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    tools:text="pepito@gmail.com" />
            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>